<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.e_commerceapp.ui.main.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:orientation="vertical"
        style="@style/loginParent"
        tools:context=".ui.main.login.LoginActivity">

        <ScrollView
            style="@style/parent">

            <RelativeLayout
                style="@style/parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:weightSum="12">

                    <LinearLayout
                        style="@style/parent"
                        android:background="@drawable/login_shape_bk"
                        android:orientation="vertical"
                        android:layout_weight="3">

                        <ImageView
                            style="@style/parent"
                            android:background="@drawable/ic_login_bk"
                            android:contentDescription="login background" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">


                    <TextView
                        style="@style/headerText"
                        android:layout_gravity="center"
                        android:text="@string/e_commerce_app"
                        android:layout_marginTop="40dp"/>

                    <androidx.cardview.widget.CardView
                        style="@style/loginCard"
                        app:cardCornerRadius="@dimen/loginCardRadius"
                        android:elevation="5dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:background="@color/whiteCardColor">


                        <LinearLayout
                            style="@style/linearParent"
                            android:layout_gravity="center"
                            android:padding="@dimen/loginViewsMargin">

                            <TextView
                                style="@style/headerTextPrimary"
                                android:text="Login"
                                android:layout_marginTop="@dimen/loginViewsMargin"/>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputEmail"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/loginViewsMargin">

                                <EditText
                                    android:id="@+id/username_editText"
                                    style="@style/modifiedEditText"
                                    android:hint="@string/username"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputPassword"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/loginViewsMargin">
                                <EditText
                                    android:id="@+id/password_editText"
                                    style="@style/modifiedEditText"
                                    android:hint="@string/login_password_hint"
                                    android:maxLines="1"
                                    android:inputType="textPassword"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/remember_me_checkbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Remember me"
                                android:textSize="12sp"
                                android:checked="@{loginViewModel.rememberMeLiveData}"
                                android:textColor="@color/primaryTextColor">
                            </CheckBox>

                                <TextView
                                    android:id="@+id/forget_password_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/forgot_password"
                                    android:textColor="@color/primaryTextColor"
                                    android:textSize="@dimen/newsMoreTextSize"
                                    android:onClick="@{(view)->loginViewModel.onForgotPasswordClick(view)}"
                                    android:layout_marginLeft="85dp"/>

                            </LinearLayout>

                            <Button
                                android:id="@+id/login_button"
                                style="@style/loginButton"
                                android:text="@string/login"
                                android:textAllCaps="false"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/loginViewsMargin"/>

                            <TextView
                                android:id="@+id/sign_up_text"
                                style="@style/parent"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textColor="@color/primaryTextColor"
                                android:text="@string/login_signup_hint"
                                android:layout_marginTop="@dimen/loginViewsMargin"
                                android:gravity="center_horizontal" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>


</layout>