<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="signUpViewModel"
            type="com.example.e_commerceapp.ui.main.sign_up.SignUpViewModel" />
    </data>

    <RelativeLayout
        android:orientation="vertical"
        style="@style/loginParent"
        tools:context=".ui.main.sign_up.SignUpActivity">
        <ScrollView
            style="@style/parent">

            <RelativeLayout
                style="@style/parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:weightSum="12">

                    <LinearLayout
                        style="@style/parent"
                        android:background="@drawable/login_shape_bk"
                        android:orientation="vertical"
                        android:layout_weight="3">

                        <ImageView
                            style="@style/parent"
                            android:background="@drawable/ic_login_bk"
                            android:contentDescription="login background"
                            android:gravity="center_horizontal" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">


                    <TextView
                        style="@style/headerText"
                        android:layout_gravity="center"
                        android:text="@string/e_commerce_app"
                        android:layout_marginTop="40dp"/>


                    <androidx.cardview.widget.CardView
                        style="@style/loginCard"
                        app:cardCornerRadius="@dimen/loginCardRadius"
                        android:elevation="5dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:background="@color/whiteCardColor">

                        <LinearLayout
                            style="@style/linearParent"
                            android:layout_gravity="center"
                            android:padding="@dimen/loginViewsMargin">

                            <TextView
                                style="@style/headerTextPrimary"
                                android:layout_marginTop="@dimen/loginViewsMargin"
                                android:hint="@string/sign_up" />

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top">
                                <EditText
                                    android:id="@+id/id_editText"
                                    style="@style/modifiedEditText"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:hint="ID"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top">
                                <EditText
                                    android:id="@+id/username_editText"
                                    style="@style/modifiedEditText"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:hint="Username"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top">
                                <EditText
                                    android:id="@+id/password_editText"
                                    style="@style/modifiedEditText"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:hint="Password"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top">
                                <EditText
                                    android:id="@+id/job_editText"
                                    style="@style/modifiedEditText"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:hint="Job"/>
                            </com.google.android.material.textfield.TextInputLayout>


                            <EditText
                                android:id="@+id/birthday_editText"
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:hint="@string/birthday"
                                android:gravity="center_vertical"
                                android:textSize="12sp"
                                android:inputType="date">
                            </EditText>


                            <Spinner
                                android:id="@+id/gender_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:entries="@array/gender_array"
                                android:layout_marginTop="@dimen/signup_text_margin_top"
                                tools:ignore="HardcodedText" />

                            <Button
                                android:id="@+id/sign_up_Button"
                                style="@style/loginButton"
                                android:layout_gravity="center"
                                android:text="@string/sign_up2"
                                android:textAllCaps="false"
                                android:layout_margin="10dp"/>

                            <TextView
                                style="@style/parent"
                                android:layout_gravity="center"
                                android:textStyle="bold"
                                android:textColor="@color/primaryTextColor"
                                android:text="@string/signup_login_hint"
                                android:layout_marginTop="@dimen/loginViewsMargin"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>